Undo after remeshing or dyntopo creates a flat shading on normals #95843

Closed
opened 2022-02-17 17:18:03 +01:00 by Diogo Valadares Reis dos Santos · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 22.2.1 30.0.14023.7007

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-16 20:55, hash: b626edd751

Caused by d9c6ceb3b8
Fixes c8814fb610 & 9ce1135440 apparently were not enough to fix this all the way

Short description of error
Similar to #95185, after using undo the normals break. but in this case, it happens after you undo a remesh or a dyntopo

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 22.2.1 30.0.14023.7007 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-16 20:55, hash: `b626edd751` Caused by d9c6ceb3b8 Fixes c8814fb610 & 9ce1135440 apparently were not enough to fix this all the way **Short description of error** Similar to #95185, after using undo the normals break. but in this case, it happens after you undo a remesh or a dyntopo **Exact steps for others to reproduce the error** - Open .blend file - Switch to sculpt mode - Remesh or Sculpt with dyntopo - then ctrl+z Test File: [#95843.blend](https://archive.blender.org/developer/F12872004/T95843.blend) [2022-02-17 13-16-52.mp4](https://archive.blender.org/developer/F12871417/2022-02-17_13-16-52.mp4)

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares

#96235 was marked as duplicate of this issue

#96235 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm.
This looks like a regression so I will check.

Thanks for the report. I can confirm. This looks like a regression so I will check.
Member

Added subscribers: @ideasman42, @HooglyBoogly

Added subscribers: @ideasman42, @HooglyBoogly
Member

Added subscribers: @kuzey, @lichtwerk

Added subscribers: @kuzey, @lichtwerk
Member

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

@ideasman42 , @HooglyBoogly : mind checking?
@ThomasDinges : showstopper?

@ideasman42 , @HooglyBoogly : mind checking? @ThomasDinges : showstopper?
Member

Just noting that this is a regression, yes, but related problems have existed before, see #90598

Just noting that this is a regression, yes, but related problems have existed before, see #90598
Hans Goudey self-assigned this 2022-03-08 18:38:08 +01:00

This issue was referenced by c77597cd0e

This issue was referenced by c77597cd0e15f9d7b6f963593b545cc94950eb8d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95843
No description provided.